// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prueba con <GifExpertApp /> debe mostrar el componente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`prueba con <GifExpertApp /> debe mostrar una lista con las categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Morty"
      key="Morty"
    />
    <GifGrid
      category="Rick"
      key="Rick"
    />
    <GifGrid
      category="Homer"
      key="Homer"
    />
  </ol>
</Fragment>
`;
